Add time series tutorials

--- a/inst/tutorials/11_1/11_1.Rmd
+++ b/inst/tutorials/11_1/11_1.Rmd
@@ -164,8 +164,21 @@ stargazer(reg1, reg2, reg3, type="text", keep.stat=c("n","rsq","adj.rsq","f"))
 grade_code()
 ```
 
+## Dynamically Complete Models in the Absence of Serial Correlation
+
+Consistency of the static model, $y_t = \beta_0 + \beta_1 x_t + u_t$ "only" requires $E(u_t|X_t)=0$.  
+Usually $u_t$ is serially correlated, but *if* we can assume that $E(u_t|X_t, y_{t-1}, X_{t-1},...) = E(u_t|X_t) = 0$, then the contemporaneous values of $X$ and $y$ contain all of the past information of themselves, and we can use the static model. 
+However, this is a strong assumption.  
+
+In general, we often encounter variables with *autocorrelation*.  
+To account for this we need to include an appropriate number of *lagged* values of the dependent *and* explanatory variables in the model. This is the idea behind the *Autoregressive Distributed Lag* (ADL) model: 
+
+$$y_t = \alpha + \rho_1 y_{t-1} + ... + \rho_p y_{t-p} + \beta_0 x_t + \beta_1 x_{t-1} + ... + \beta_p x_{t-p} + u_t$$
+
+where $p$ is the optimal lag length that can be determined using the *Akaike Information Criterion* (AIC) or *Bayesian Information Criterion* (BIC).
+
 ## Rules of Thumb
 
 1.  Include lags of the dependent variable
-2.  Take first differences (sometimes higher differences)
-3.  Check for serial correlation?
+2.  Check for serial correlation in the errors (see Chapter 12)
+3.  Take first (or higher-order) differences (see chapter 18)
